@@ -13,9 +13,15 @@ void cell_finish_layout (GnmCell *cell, GnmRenderedValue *rv,
 			 int col_width,
 			 gboolean inhibit_overflow);
 
+typedef struct {
+	GdkRGBA extension_marker_color;
+	int extension_marker_size;
+} GnmCellDrawStyle;
+
 void cell_draw (GnmCell const *cell, cairo_t* cr,
 		int x, int y, int height, int width, int h_center,
-		gboolean show_extension_markers);
+		gboolean show_extension_markers,
+		GnmCellDrawStyle const *style);
 
 G_END_DECLS
 
